# cg_assignment

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
src/shaders/: shader.frag  shader.vert
